--- a/ShoppingList/Views/_ViewImports.cshtml
+++ b/ShoppingList/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using server
-@using server.Models
+﻿@using ShoppingList
+@using ShoppingList.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
