Updated the css a little bit for the navbar and added NotFound page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,3 +6,40 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+* {
+  margin: 0;
+  font-family: "Consolas";
+  color: #333;
+}
+
+.navbar {
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+
+.navbar h1 {
+  font-size: 30px;
+  color: #0d81ce;
+}
+
+.navbar .links {
+  font-size: 25px;
+  margin-left: auto;
+}
+
+.navbar a {
+  margin-left: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+
+.navbar a:hover {
+  color: #0d81ce;
+  -webkit-transition: color ease-in-out .15s;
+  transition: color ease-in-out .15s;
+}
